@@ -11,6 +11,7 @@ public:
     Texture2D base;
     Texture2D faved;
     Texture2D image;
+    Texture2D image1;
     Font font30;
     Font font50;
 
@@ -19,6 +20,7 @@ public:
         base = LoadTexture("assets\\star-button-blank.png");
         faved = LoadTexture("assets\\star-button-on.png");
         image = LoadTexture("assets\\back-button.png");
+        image1 = LoadTexture("assets\\edit-button.png");
         font30 = LoadFontEx("assets\\Poppins-Medium.ttf", 30, 0, 0);
         font50 = LoadFontEx("assets\\Poppins-Medium.ttf", 50, 0, 0);
         SetTextureFilter(font30.texture, TEXTURE_FILTER_BILINEAR);
